Implements #101. Fixes month rota on mobiles

--- a/var/less/hyde/gridism.less
+++ b/var/less/hyde/gridism.less
@@ -69,7 +69,7 @@
    max-width: 100%;
 }
 /* Responsive Stuff */
-@media screen and (max-width: 568px) {
+@media screen and (max-width: 768px) {
    /* Stack anything that isn’t full-width on smaller screens
       and doesn't provide the no-stacking-on-mobiles class */
    .grid:not(.no-stacking-on-mobiles) > .unit {
