--- a/var/less/hyde/style.less
+++ b/var/less/hyde/style.less
@@ -87,7 +87,7 @@ h5:hover .header-link, h6:hover .header-link {
 @media (max-width: 768px) {
    .main-nav ul { text-align: right; }
 }
-@media (max-width: 830px) {
+@media (max-width: 768px) {
    .main-nav {
       .hide-on-mobiles { display: none; }
       .show-on-mobiles { display: inline; }
@@ -111,7 +111,7 @@ footer {
       p { display: inline-block; }
    }
 }
-@media (max-width: 568px) {
+@media (max-width: 768px) {
    footer {
       .one-third  p { margin-bottom: 0; }
       .two-thirds p { margin-top: -20px; }
@@ -428,7 +428,7 @@ footer {
    p { font-size: 1.5em; line-height: 1em; margin: 0; }
    .unit { padding: 10px 0 40px; }
 }
-@media (min-width: 569px) {
+@media (min-width: 768px) {
    .intro p { font-size: 2em; }
 }
 /* Quickstart */
@@ -506,10 +506,10 @@ article {
 @media (max-width: 480px) {
    article ul { padding-left: 20px; }
 }
-@media (max-width: 568px) {
+@media (max-width: 768px) {
    article { margin: 0; }
 }
-@media (min-width: 768px) {
+@media (min-width: 840px) {
    article { font-size: 14px; padding: 40px 40px 30px; }
 }
 /* Right-side nav - used by both docs and news */
@@ -626,7 +626,7 @@ article h2:first-child, { margin-top: 0; }
    }
 }
 .post-content img { max-width: 100% }
-@media (max-width: 568px) {
+@media (max-width: 768px) {
    .post-category { padding-left: 30px; }
 }
 @media (min-width: 768px) {
@@ -867,7 +867,7 @@ table.embeded td { white-space: nowrap; }
       font-size: .75em; font-weight: 400;
    }
 }
-@media (max-width: 568px) {
+@media (max-width: 768px) {
    .note { margin-right: -30px; }
 }
 
@@ -915,7 +915,7 @@ table.embeded td { white-space: nowrap; }
 .show-on-mobiles {
    display: none;
 }
-@media screen and (max-width: 568px) {
+@media screen and (max-width: 768px) {
    .show-on-mobiles {
       display: block !important;
    }
